# crashpad-wrapper-lib-android

./: .gitignore  README.md  settings.gradle
bugsplatunitylib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
bugsplatunitylib/src/main/cpp/crashpad/lib/arm64-v8a/: .ninja_deps  .ninja_log  args.gn  base94_encoder  crashpad_client_test  crashpad_database_util  crashpad_handler  crashpad_handler_test  crashpad_handler_test_extended_handler  crashpad_http_upload  crashpad_minidump_test  crashpad_snapshot_test  crashpad_test_test  crashpad_test_test_multiprocess_exec_test_child  crashpad_util_test  generate_dump  gmock_link_test  gmock_stress_test  gtest_all_test  gtest_environment_test  gtest_listener_test  gtest_macro_stack_footprint_test  gtest_no_test  gtest_param_test  gtest_premature_exit_test  gtest_repeat_test  gtest_skip_in_environment_setup_test  gtest_sole_header_test  gtest_stress_test  gtest_unittest_api_test  toolchain.ninja
bugsplatunitylib/src/main/cpp/crashpad/lib/armeabi-v7a/: .ninja_deps  .ninja_log  args.gn  base94_encoder  crashpad_client_test  crashpad_database_util  crashpad_handler  crashpad_handler_test  crashpad_handler_test_extended_handler  crashpad_http_upload  crashpad_minidump_test  crashpad_snapshot_test  crashpad_test_test  crashpad_test_test_multiprocess_exec_test_child  crashpad_util_test  generate_dump  gmock_link_test  gmock_stress_test  gtest_all_test  gtest_environment_test  gtest_listener_test  gtest_macro_stack_footprint_test  gtest_no_test  gtest_param_test  gtest_premature_exit_test  gtest_repeat_test  gtest_skip_in_environment_setup_test  gtest_sole_header_test  gtest_stress_test  gtest_unittest_api_test  toolchain.ninja
bugsplatunitylib/src/main/cpp/crashpad/lib/x86/: .ninja_deps  .ninja_log  args.gn  base94_encoder  build.ninja.d  crashpad_client_test  crashpad_database_util  crashpad_handler_test  crashpad_handler_test_extended_handler  crashpad_http_upload  crashpad_minidump_test  crashpad_snapshot_test  crashpad_test_test  crashpad_test_test_multiprocess_exec_test_child  crashpad_util_test  generate_dump  gmock_link_test  gmock_stress_test  gtest_all_test  gtest_environment_test  gtest_listener_test  gtest_macro_stack_footprint_test  gtest_no_test  gtest_param_test  gtest_premature_exit_test  gtest_repeat_test  gtest_skip_in_environment_setup_test  gtest_sole_header_test  gtest_stress_test  gtest_unittest_api_test  toolchain.ninja
bugsplatunitylib/src/main/cpp/crashpad/lib/x86_64/: .ninja_deps  .ninja_log  args.gn  base94_encoder  build.ninja  crashpad_client_test  crashpad_database_util  crashpad_handler_test  crashpad_handler_test_extended_handler  crashpad_http_upload  crashpad_test_test  (+20 more)
(+3 files in other folders)
